--- a/WebBooks/catalog/templates/index.html
+++ b/WebBooks/catalog/templates/index.html
@@ -1,72 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {%block title %}<title>Мир книг</title>{% endblock %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3/3/7/css/bootsrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootsrap/3/3/7/js/bootstrap.min.js"></script>
+{% extends "base_generic.html" %}
 
+{% block content %}
+<h1>Главная страница</h1>
 
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block head %}
-        <img src="{% static 'images/logotip.jpg' %}"
-             style="width:100px; heith:100px;" align="absmiddle">
-        <font size=7, color="blue">Сайт мир книг</font>
-    {% endblock %}
+    <p>Добро пожаловать в <em>Мир книг</em>, Это очень простой веб сайт, написанный на Django. Разработан на Python в качерстве учебного примера с использованием Pycharm.</p>
 
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
-            {% block sidebar %}
-                <ul class="sidebar-nav">
-                    <li><a href="{% url 'index' %}"Главная страница</a></li>
-                    <li><a href="">Все книги</a> </li>
-                    <li><a href="">Все авторы</a></li>
-                </ul>
-                {% endblock %}
-            </div>
-        <div class="col-sm-10">
-        {% block content %} {% endblock %}
-        {% block footer %}
-            {% block copyright %}
-        <p>Copyright OOO "Люди и книги", 2020. Все права защищены</p>
-            {% endblock %}
-        {% endblock %}
+<h2>Динамический контент</h2>
 
-    </div>
-            </div>
-        </div>
+    <p>База данных сайта Мир книг содержит следующее количество записей :</p>
+<ul>
+    <li><strong>Количество книг:</strong> {{ num_book }}</li>
+    <li><strong>Количество экземпляров книг:</strong> {{ num_instances }}</li>
+    <li><strong>Количество экземпляров книг в заказе:</strong> {{ num_instances_avaivable }}</li>
+    <li><strong>Количество авторов книг:</strong> {{ num_authors }}</li>
+</ul>
 
+{% endblock %}
 
-    {% extends "base_generic.html" %}
+context={'num_books':num_books,
+            'num_instances;"num_instances,
+            'num_instances_available':num_instances_available,
+            'num_authors':num_authors}
 
-    {% block content %}
-    <h1>Главная страница</h1>
-
-      <p>Добро пожаловать в <em>Мир книг</em>, Это очень простой
-        веб-сайт, написанный на  Django. Разработан на Python
-        в качестве учебного примера с использованием PyCharm.</p>
-
-    <h2>Динамический контент</h2>
-
-      <p>База данных сайта Мир книг содержит следующее
-         количество записей :</p>
-      <ul>
-        <li><strong>Количество книг:</strong> {{ num_books }}</li>
-        <li><strong>Количество экземпляров книг:
-            </strong> {{ num_instances }}</li>
-        <li><strong>Количество экземпляров книг в заказе:
-            </strong> {{ num_instances_available }}</li>
-        <li><strong>Количество авторов книг:
-            </strong> {{ num_authors }}</li>
-      </ul>
-    {% endblock %}
-
-</body>
-</html>
